openshift/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: odoo
  labels:
    app.kubernetes.io/name: odoo
    app.kubernetes.io/instance: odoo
    app.kubernetes.io/component: server
spec:
  type: ClusterIP
  ports:
    - name: http
      port: 80
      targetPort: http
      protocol: TCP
  selector:
    app.kubernetes.io/name: odoo
    app.kubernetes.io/instance: odoo
